Skinned meshes now send weight and joint data to the gpu. Removed some debug code from the Rigidbody component. Added a new vertex shader for skinned meshes.

--- a/Mackerel-Core/Mackerel-Core.vcxproj
+++ b/Mackerel-Core/Mackerel-Core.vcxproj
@@ -550,6 +550,7 @@
     <None Include="res\Shaders\static\FBDisplayer.glsl" />
     <None Include="res\Shaders\vertexHeader.glsl" />
     <None Include="res\Shaders\vert\projection.vert" />
+    <None Include="res\Shaders\vert\skinned_projection.vert" />
     <None Include="src\MaterialDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
