--- a/Mackerel-Core/Mackerel-Core.vcxproj
+++ b/Mackerel-Core/Mackerel-Core.vcxproj
@@ -543,6 +543,7 @@
     <None Include="build\AssetAcquisition.py" />
     <None Include="res\Shaders\fragmentHeader.glsl" />
     <None Include="res\Shaders\frag\monoColour.glsl" />
+    <None Include="res\Shaders\frag\textured.glsl" />
     <None Include="res\Shaders\frag\unlitShadows.glsl" />
     <None Include="res\Shaders\lightsHeader.glsl" />
     <None Include="res\Shaders\light\unlit.glsl" />
@@ -627,6 +628,7 @@
     <Media Include="res\Sounds\Voyager.mp3" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\Textures\survivorMaleB.png" />
     <Image Include="res\UI\ButtonAnimationSmall.png" />
     <Image Include="res\UI\ButtonAudioSmall.png" />
     <Image Include="res\UI\ButtonPhysicsSmall.png" />
