--- a/Mackerel-Core/Mackerel-Core.vcxproj.filters
+++ b/Mackerel-Core/Mackerel-Core.vcxproj.filters
@@ -154,6 +154,9 @@
     <Filter Include="Source Files\Systems\Rendering\Animation">
       <UniqueIdentifier>{a3fbd506-8485-402a-878d-2fee9c74ad1b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\Textures">
+      <UniqueIdentifier>{dbf8bee2-d057-4e6b-aac4-d0fc11c80408}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ext\GLAD\src\glad.c">
@@ -1783,6 +1786,9 @@
     <None Include="res\Shaders\vert\skinned_projection.vert">
       <Filter>Resource Files\Shaders\Vertex Shaders</Filter>
     </None>
+    <None Include="res\Shaders\frag\textured.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="src\LoggingSystem.conf">
@@ -1829,6 +1835,9 @@
     </Image>
     <Image Include="res\UI\PlayPhysics.png">
       <Filter>Resource Files\UI</Filter>
+    </Image>
+    <Image Include="res\Textures\survivorMaleB.png">
+      <Filter>Resource Files\Textures</Filter>
     </Image>
   </ItemGroup>
 </Project>
