--- a/Mackerel-Demo/Mackerel-Demo.vcxproj
+++ b/Mackerel-Demo/Mackerel-Demo.vcxproj
@@ -133,6 +133,7 @@
       <AdditionalIncludeDirectories>$(SolutionDIR)\Mackerel-Core\src;$(SolutionDIR)\Mackerel-Core\ext\ozz\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <ExceptionHandling>Async</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
