--- a/Mackerel-Core/Mackerel-Core.vcxproj.filters
+++ b/Mackerel-Core/Mackerel-Core.vcxproj.filters
@@ -1804,6 +1804,15 @@
     <None Include="res\Shaders\frag\unlitShadows_point.glsl">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+    <None Include="res\Shaders\frag\pbrTextured.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="res\Shaders\light\pbrShadows.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="res\Shaders\light\pbrShadows_point.glsl">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="src\LoggingSystem.conf">
